# gtestcov

./: .gitignore  AGENTS.md  README.md  codex_embedded_cpp_gtest_final_guide.md  codex_embedded_cpp_gtest_initial_guide.md  pyproject.toml
Out_of_the_box_ready/: gtestcov_install_manifest.json  install.md  给开发人员看的指导.md
docs/: codrax_long_run_validation_v1.md  gtestcov_workflow.drawio  gtestcov_workflow.md  install.md  project_structure.md  round01_change_summary.md  round01_implementation_audit.md  round01_implementation_phases.md  round01_large_project_codrax_optimization_plan.md  round01_post_stabilization_cleanup.md  round01_stabilization_spot_audit.md  round01_stabilization_summary.md
examples/energy_mini_repo/: CMakeLists.txt  dependency.xml  project_profile.yaml
examples/energy_mini_repo/src/: can_codec.cpp  can_codec.hpp  energy_service.cpp  energy_service.hpp  global_config.cpp  global_config.hpp  power_limit.cpp  power_limit.hpp
examples/energy_mini_repo/tests/: can_codec_test.cpp  energy_service_component_test.cpp  regression_crash_test.cpp
examples/energy_mini_repo/tests/support/fakes/: fake_hal.cpp  fake_nvm.cpp  fake_nvm.hpp
examples/energy_mini_repo/tests/support/guards/: scoped_global_config_guard.hpp
examples/energy_mini_repo/tests/support/harness/: energy_service_harness.hpp
src/gtestcov/: __init__.py  adapters.py  analyzer.py  audit.py  cli.py  codrax.py  cover.py  coverage_goal.py  dependency.py  detached_evidence.py  diagnose.py  discovery.py  evidence_backend.py  evidence_pack.py  evidence_paths.py  evidence_types.py  file_index.py  fs.py  mcp_server.py  memory.py  models.py  next_round.py  obligations.py  opencode.py  permissions.py  preflight.py  profile.py  profile_sync.py  run_status.py  search_backend.py  semantic_backend.py  task.py  understanding.py  upgrade.py  verify.py  version.py
tests/: test_core.py
