[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtestcov"
version = "0.2.0"
description = "OpenCode-oriented gtest generation and coverage orchestration for embedded C++ projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.9.0",
  "pydantic>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
gtestcov = "gtestcov.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
